# no-bitches-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-compose.yml  requirements.txt
assets/: arch.drawio
src/: main.rs  memeifyer.py
